--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nocache": "^3.0.4",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sharp": "^0.31.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
