--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "razorpay": "^2.8.4",
     "sharp": "^0.31.2",
-    "twilio": "^3.84.0"
+    "twilio": "^2.5.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
