--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "html2pdf.js": "^0.10.1",
     "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
     "nocache": "^3.0.4",
