--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "develop": "nodemon server.js"
+    "start": "node server.js",
+    "devStart": "nodemon server.js",
+    "build":"npm i"
   },
   "keywords": [],
   "author": "",
